# ts_atdome

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.cfg  setup.py  todo.txt
bin.src/: run_atdome.py  run_atdome_simulator.py
conda/: meta.yaml
doc/: conf.py  developer-guide.rst  developer_guide.rst  index.rst  manifest.yaml  revision_history.rst  version_history.rst
doc/lsst.ts.ATDome/: index.rst
python/lsst/ts/ATDome/: __init__.py  cli.py  config_schema.py  dome_csc.py  enums.py  mock_controller.py  sal_enums.py  status.py  utils.py
python/lsst/ts/atdome/: __init__.py  config_schema.py  dome_csc.py  enums.py  mock_controller.py  status.py
schema/: ATDome.yaml
tests/: test_black.py  test_csc.py  test_mock_controller.py  test_validation.py
tests/data/config/: _init.yaml  invalid_malformed.yaml  invalid_nonpositive_connection_timeout.yaml  invalid_nonpositive_read_timeout.yaml  invalid_wrongtype_connection_timeout.yaml  invalid_wrongtype_host.yaml  invalid_wrongtype_port.yaml  invalid_wrongtype_read_timeout.yaml
ups/: ts_ATDome.table  ts_atdome.table
