[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_atdome"
description = "CSC to control the dome for the auxiliary telescope at the Vera C. Rubin Observatory."
license = { text = "GPL" }
classifiers = ["Programming Language :: Python :: 3"]
urls = { documentation = "https://ts-atdome.lsst.io", repository = "https://github.com/lsst-ts/ts_atdome" }
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = ["python"]

[project.scripts]
run_atdome = "lsst.ts.atdome:run_atdome"

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
